--- a/client/package.json
+++ b/client/package.json
@@ -7,20 +7,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.3",
+    "@prisma/client": "^4.0.0",
     "next": "^12.1.6",
+    "next-auth": "^4.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/node": "17.0.42",
-    "@types/react": "^18.2.0",
+    "@types/react": "^18.0.15",
     "autoprefixer": "^10.4.7",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.11",
+    "prisma": "^4.0.0",
     "tailwindcss": "^3.1.2",
     "typescript": "4.7.3"
   }
