--- a/client/package.json
+++ b/client/package.json
@@ -9,14 +9,17 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^4.0.0",
+    "axios": "^0.27.2",
     "next": "^12.1.6",
     "next-auth": "^4.10.0",
+    "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/node": "17.0.42",
+    "@types/qs": "^6.9.7",
     "@types/react": "^18.0.15",
     "autoprefixer": "^10.4.7",
     "eslint": "8.17.0",
