--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "next": "^12.1.6",
     "next-auth": "^4.10.0",
+    "next-connect": "^1.0.0-next.2",
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
