✨ Save Notion ID to DB

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "cSpell.words": ["NEXTAUTH", "Twotion"],
+  "cSpell.words": ["NEXTAUTH", "notionhq", "Twotion"],
   "discord.enabled": false
 }
