--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.3",
+    "@notionhq/client": "^2.0.0",
     "@prisma/client": "^4.0.0",
     "axios": "^0.27.2",
     "next": "^12.1.6",
