--- a/chrome_extension/package.json
+++ b/chrome_extension/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && node scripts/fixCss.js",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -19,6 +19,9 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.6",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
   }
