--- a/chrome_extension/package.json
+++ b/chrome_extension/package.json
@@ -11,6 +11,7 @@
     "@babel/runtime": "^7.18.6",
     "@types/chrome": "^0.0.193",
     "@types/node": "^18.0.3",
+    "axios": "^0.27.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "vite-plugin-chrome-extension": "^0.0.7"
