--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": "next",
+  "extends": ["next/babel", "next/core-web-vitals"],
   "rules": {
     "@next/next/no-img-element": "off"
   }
