--- a/client/package.json
+++ b/client/package.json
@@ -10,14 +10,18 @@
     "@next-auth/prisma-adapter": "^1.0.3",
     "@notionhq/client": "^2.0.0",
     "@prisma/client": "^4.0.0",
+    "@types/request": "^2.48.8",
     "axios": "^0.27.2",
+    "form-data": "^4.0.0",
     "next": "^12.1.6",
     "next-auth": "^4.10.0",
     "next-connect": "^1.0.0-next.2",
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "request": "^2.88.2",
+    "twitter-api-v2": "^1.12.3"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
