--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^4.0.0",
     "@types/request": "^2.48.8",
     "axios": "^0.27.2",
+    "file-type": "^17.1.4",
     "form-data": "^4.0.0",
     "next": "^12.1.6",
     "next-auth": "^4.10.0",
@@ -20,7 +21,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
-    "request": "^2.88.2",
     "twitter-api-v2": "^1.12.3"
   },
   "devDependencies": {
