✨ Created Install Extension Section

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "cSpell.words": ["NEXTAUTH", "notionhq", "Twotion"],
+  "cSpell.words": ["Googlechrome", "NEXTAUTH", "notionhq", "Twotion"],
   "discord.enabled": true
 }
