--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
+    "@types/chrome": "^0.0.193",
     "@types/node": "17.0.42",
     "@types/qs": "^6.9.7",
     "@types/react": "^18.0.15",
