--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.3",
+    "@nextui-org/react": "^1.0.0-beta.9",
     "@notionhq/client": "^2.0.0",
     "@prisma/client": "^4.0.0",
     "@types/request": "^2.48.8",
