--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@nextui-org/react": "^1.0.0-beta.9",
     "@notionhq/client": "^2.0.0",
@@ -22,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-twitter-embed": "^4.0.4",
     "twitter-api-v2": "^1.12.3"
   },
   "devDependencies": {
