💄 Created Landing Page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,12 @@
 {
   "cSpell.words": [
     "Googlechrome",
+    "Hackathon",
+    "Hashnode",
     "NEXTAUTH",
     "nextui",
     "notionhq",
+    "nprogress",
     "Twotion"
   ],
   "discord.enabled": true
