--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "next": "^12.1.6",
     "next-auth": "^4.10.0",
     "next-connect": "^1.0.0-next.2",
+    "nprogress": "^0.2.0",
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,6 +31,7 @@
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/chrome": "^0.0.193",
     "@types/node": "17.0.42",
+    "@types/nprogress": "^0.2.0",
     "@types/qs": "^6.9.7",
     "@types/react": "^18.0.15",
     "autoprefixer": "^10.4.7",
